--- a/src/components/CartButton/CartButton.css
+++ b/src/components/CartButton/CartButton.css
@@ -4,10 +4,19 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  justify-self: flex-end;
   padding: 8px 24px;
   width: 89px;
   height: 40px;
   background-color: var(--color-malachite);
   color: var(--color-white);
   border-radius: 8px;
+}
+
+.cart-container__number {
+  align-self: center;
+  font-weight: normal;
+  font-size: var(--font-size-button);
+  margin-left: 8px;
+  color: var(--color-white);
 }
