--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,35 @@
 
-.header-container__logo-text {
+.header-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  padding: 16px;
+}
+
+.header-container__logo {
+  display: flex;
+  align-items: center;
   font-family: 'Inter', sans-serif;
   font-style: italic;
   font-weight: 900;
   font-size: 2.2rem;
   color: var(--color-orange);
+}
+
+.header-container__row {
+  margin: 16px 16px 0;
+}
+
+.header-container__address {
+  text-align: center;
+  margin-top: 16px;
+}
+
+.header-container__location {
+  text-align: center;
+  grid-column: 1 / 3;
+  margin-top: 16px;
+  font-weight: 700;
+  font-size: var(--font-size-body-1-bold);
+  color: var(--color-cocoa-brown);
 }
