--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,29 +7,45 @@
 }
 
 .header-container__logo {
-  display: flex;
   align-items: center;
+  color: var(--color-orange);
+  display: flex;
   font-family: 'Inter', sans-serif;
+  font-size: 2.2rem;
   font-style: italic;
   font-weight: 900;
-  font-size: 2.2rem;
-  color: var(--color-orange);
 }
 
-.header-container__row {
-  margin: 16px 16px 0;
-}
-
-.header-container__address {
-  text-align: center;
-  margin-top: 16px;
+.header-container__cart-button {
+  justify-self: flex-end;
 }
 
 .header-container__location {
-  text-align: center;
+  color: var(--color-cocoa-brown);
+  font-size: var(--font-size-body-1-bold);
+  font-weight: 700;
   grid-column: 1 / 3;
   margin-top: 16px;
-  font-weight: 700;
-  font-size: var(--font-size-body-1-bold);
-  color: var(--color-cocoa-brown);
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .header-container {
+    /* grid-template-columns: repeat(3, 1fr); */
+    display: flex;
+    justify-content: space-between;
+    padding: 36px 40px;
+  }
+  .header-container__cart-button {
+    order: 2;
+    margin-left: 16px;
+  }
+  .header-container__location {
+    order: 1;
+    display: flex;
+    align-items: center;
+    margin: 0 0 0 auto;
+    border-right: 1px solid #B8B4B4;
+    padding-right: 16px;
+  }
 }
