--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,20 +1,46 @@
 
 .hero-container {
-  margin: 24px 16px 0;
   border-radius: 8px;
-  position: relative;
   height: 132px;
+  margin: 24px 16px;
+  position: relative;
 }
 
 .hero-container__image {
-  width: 100%;
+  border-radius: 8px;
   height: 100%;
   object-fit: cover;
-  border-radius: 8px;
+  width: 100%;
 }
 
 .hero-container__title {
+  align-items: center;
+  color: var(--color-white);
+  display: flex;
+  font-size: var(--font-size-body-2-bold);
+  font-weight: 700;
+  height: 100%;
+  justify-content: center;
+  line-height: 24px;
+  padding: 0 43px;
   position: absolute;
+  text-align: center;
   top: 0;
-  color: #fff;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .hero-container {
+    border-radius: 16px;
+    height: 250px;
+    margin: 40px var(--margin-big-screen);
+  }
+  .hero-container__image {
+    border-radius: 16px;
+  }
+  .hero-container__title {
+    font-size: var(--font-size-headline-1);
+    font-weight: 600;
+    line-height: 42px;
+  }
 }
