offers card started

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,9 @@
   --color-orange: #FC462D;
   --color-background: #FAFAF8;
 
+  --color-purple: #5E18BB;
+  --color-purple-bg: #F0E3FE;
+
   --margin-small-screen: 16px;
   --margin-big-screen: 40px;
 }
