--- a/src/pages/OffersPage/OffersPage.css
+++ b/src/pages/OffersPage/OffersPage.css
@@ -9,3 +9,9 @@
   color: var(--color-black);
   margin: 16px 0;
 }
+
+@media (min-width: 768px) {
+  .offers-page-container {
+    margin: 0 var(--margin-big-screen);
+  }
+}
