--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,15 +1,14 @@
-
-.offers-card-container {
+.item-card-container {
   display: flex;
   flex-direction: column;
   width: 172px;
 }
 
-.offers-card-container__disccount {
+.item-card-container__disccount {
   padding: 4px 0;
 }
 
-.offers-card-container__disccount-label {
+.item-card-container__disccount-label {
   background-color: var(--color-purple-bg);
   border-radius: 16px;
   color: var(--color-purple);
@@ -20,32 +19,32 @@
   padding: 4px;
 }
 
-.offers-card-container__figure-product {
+.item-card-container__figure-product {
   height: 172px;
   margin-top: 16px;
   width: 172px;
 }
 
-.offers-card-container__figure-product-image {
+.item-card-container__figure-product-image {
   height: 100%;
   width: 100%;
 }
 
-.offers-card-container__prices-container {
+.item-card-container__prices-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-top: 16px;
 }
 
-.offers-card-container__prices-container--low-price {
+.item-card-container__prices-container--low-price {
   color: var(--color-cocoa-brown);
   font-size: var(--font-size-body-1-bold);
   font-weight: 700;
   line-height: 24px;
 }
 
-.offers-card-container__prices-container--normal-price {
+.item-card-container__prices-container--normal-price {
   color: var(--color-boulder);
   font-size: var(--font-size-body-1-bold);
   font-weight: 600;
@@ -53,7 +52,7 @@
   text-decoration: line-through;
 }
 
-.offers-card-container__description-text {
+.item-card-container__description-text {
   color: var(--color-cocoa-brown);
   font-size: var(--font-size-body-2-regular);
   font-weight: 400;
@@ -62,7 +61,7 @@
   margin-top: 8px;
 }
 
-.offers-card-container__add-button {
+.item-card-container__add-button {
   background-color: var(--color-malachite);
   border-radius: 8px;
   border: none;
@@ -77,17 +76,20 @@
 }
 
 @media (min-width: 768px) {
-  .offers-card-container {
+  .item-card-container {
     width: 194px;
   }
-  .offers-card-container__figure-product {
+
+  .item-card-container__figure-product {
     height: 194px;
     width: 194px;
   }
-  .offers-card-container__description-text {
+
+  .item-card-container__description-text {
     height: 72px;
   }
-  .offers-card-container__add-button {
+
+  .item-card-container__add-button {
     margin-bottom: 16px;
   }
 }
