--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -19,6 +19,10 @@
   padding: 4px;
 }
 
+.wituout-disccount {
+  /* display: none; */
+}
+
 .item-card-container__figure-product {
   height: 172px;
   margin-top: 16px;
@@ -30,33 +34,15 @@
   width: 100%;
 }
 
-.item-card-container__prices-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 16px;
-}
 
-.item-card-container__prices-container--low-price {
-  color: var(--color-cocoa-brown);
-  font-size: var(--font-size-body-1-bold);
-  font-weight: 700;
-  line-height: 24px;
-}
-
-.item-card-container__prices-container--normal-price {
-  color: var(--color-boulder);
-  font-size: var(--font-size-body-1-bold);
-  font-weight: 600;
-  line-height: 24px;
-  text-decoration: line-through;
-}
 
 .item-card-container__description-text {
   color: var(--color-cocoa-brown);
   font-size: var(--font-size-body-2-regular);
   font-weight: 400;
-  height: 48px;
+  min-height: 48px;
+  width: 172px;
+  white-space: normal;
   line-height: 24px;
   margin-top: 8px;
 }
