--- a/src/pages/PopularPage/PopularPage.css
+++ b/src/pages/PopularPage/PopularPage.css
@@ -14,4 +14,7 @@
   .popular-page-container {
     margin: 0 var(--margin-big-screen);
   }
+  .popular-page-container__subtitle {
+    margin: 40px 0;
+  }
 }
